# cpExcel

./: .gitignore  LICENSE  Makefile  README.md  main.py  pyproject.toml
src/: cp.py  gui.py  manual.py
tests/: test_cp.py
