[project]
name = "cpexcel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "customtkinter>=5.2.2",
    "openpyxl>=3.1.5",
    "pillow>=12.2.0",
]

[dependency-groups]
dev = [
    "bandit>=1.9.4",
    "mypy>=2.1.0",
    "pip-audit>=2.10.0",
    "pyinstaller>=6.20.0",
    "pytest>=9.0.3",
    "radon>=6.0.1",
    "ruff>=0.15.13",
    "xenon>=0.9.3",
]

